# ai-memory-card

./: .gitignore  LICENSE  README.md  README.zh-CN.md
apps/local-web/backend/: alembic.ini  environment.yml  pyproject.toml
apps/local-web/backend/alembic/: env.py
apps/local-web/backend/alembic/versions/: 0001_initial_schema.py  0002_soft_delete_and_system_meta.py  0003_folder_and_review_log.py  0004_review_session_v3.py  0005_learning_event_core_loop.py  0006_global_study_settings.py  0007_knowledge_units.py  0008_onboarding_seed_state.py  0009_scheduler_mode_setting.py
apps/local-web/backend/app/: main.py
apps/local-web/backend/app/api/: dependencies.py  error_handlers.py
apps/local-web/backend/app/core/: config.py  (+4 more)
apps/local-web/backend/tests/: conftest.py  test_activity_api.py  test_ai_plugin_host_service.py  test_ai_plugin_status_api.py  test_ai_rag_import_api.py  test_card_assets_api.py  test_card_update_api.py  test_deck_card_api.py  test_deck_update_api.py  test_export_api.py  test_folder_update_api.py  test_health.py  test_import_api.py  test_importers.py  test_logging_setup.py  test_migration_smoke.py  test_onboarding_seed_service.py  test_plugin_client.py  test_remote_ai_provider.py  test_review_flow.py  test_review_queue.py  test_review_session_v3.py  test_runtime_paths.py  test_scheduler_ai_rl_integration.py  test_scheduler_basic.py  test_scheduler_session_v3.py  test_settings_api.py  test_startup_migrations.py  test_stats_api.py  test_system_api.py  test_trash_api.py
apps/local-web/desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
(+177 files in other folders)
