[package]
name = "ai-memory-card-desktop"
version = "0.1.0"
description = "Tauri desktop shell for AI Memory Card"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "1.6", features = ["window-data-url", "dialog-open"] }
ureq = { version = "2.10", features = ["json"] }
url = "2.5"

[features]
custom-protocol = ["tauri/custom-protocol"]
